// A message structure to control a signal generator's output waveform.

syntax = "proto3";

enum WaveShape {
  WAVE_SHAPE_UNSPECIFIED = 0;
  WAVE_SHAPE_SINE = 1;
  WAVE_SHAPE_SQUARE = 2;
}

message WaveformCtl {
  float amplitudeV = 1;
  float frequencyHz = 2;
  float offsetV = 3;
  WaveShape shape = 4;
  bool enabled = 5;
}

message WaveformTlm {
  float voltageV = 1;
  sint32 currentMa = 2;
}

message Ack {
  fixed32 refCRC = 1;
}

enum ParamOperation {
  CURRENT_VAL = 0;
  GET = 1;
  SET = 2;
}

message TouchParam {
  ParamOperation operation = 1;
  oneof param {
    float paramA = 2;
    int32 paramB = 3;
  }
}

message Top {
  oneof sub {
    WaveformCtl WaveformCtl = 1;
    WaveformTlm WaveformTlm = 2;
  }
}